tests/rascal/negative/type_errors/L1/14_expression_ES10_D4_14.ob
MODULE Test14;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               r := q;
               z := ((+ (200 MOD (+ 1))) + (- z));
               y := (- y);
  (* error *)  z := x;
               r := r;
               x := (0 * (((x MOD 200) - (+ 0)) MOD 1));
               q := ((p & r) & r);
               p := ((y MOD (+ 2)) = (1 + y));
               p := (q & (((0 * y) * z) < (x * 2)));
               y := (2 + y)
END Test14.